Fix gap between columns

--- a/src/blocks/common.blocks/page/__fullscreen/page__fullscreen.css
+++ b/src/blocks/common.blocks/page/__fullscreen/page__fullscreen.css
@@ -1,11 +1,13 @@
 .page__fullscreen
 {
+    position: relative;
     z-index: 100;
+    left: 5px;
 
     box-sizing: border-box;
     width: 20px;
     height: 20px;
-    margin: 9px -20px 0 5px;
+    margin: 9px -20px 0 0;
 
     cursor: pointer;
 
@@ -22,6 +24,16 @@
 .page__fullscreen:hover
 {
     opacity: 1;
+}
+
+.page__fullscreen + .content .post
+{
+    padding-left: 5px;
+}
+
+.page__fullscreen + .content .post_view_list-item
+{
+    padding-left: 30px;
 }
 
 .page_fullscreen .page__fullscreen
